# iss_description

./: CMakeLists.txt  README.md  package.xml
config/: mobile_servicing_system.srdf  mobile_servicing_system_control.yaml
launch/: mobile_servicing_system_gz.launch.py  simulate_cameras.launch.py  spawn_mobile_servicing_system.launch.py  view_iss.launch.py  view_mobile_servicing_system.launch.py
meshes/: canadarm2_base.dae  canadarm2_link_1.dae  canadarm2_link_2.dae  canadarm2_link_3.dae  canadarm2_link_4.dae  canadarm2_link_5.dae  canadarm2_link_6.dae  canadarm2_link_7.dae  dextre_arm_1_elbow_pitch.dae  dextre_arm_1_shoulder_pitch.dae  dextre_arm_1_shoulder_roll.dae  dextre_arm_1_shoulder_yaw.dae  dextre_arm_1_wrist_pitch_yaw.dae  dextre_arm_1_wrist_roll.dae  dextre_arm_2_elbow_pitch.dae  dextre_arm_2_shoulder_pitch.dae  dextre_arm_2_shoulder_roll.dae  dextre_arm_2_shoulder_yaw.dae  dextre_arm_2_wrist_pitch_yaw.dae  dextre_arm_2_wrist_roll.dae  dextre_base.dae  dextre_body.dae  dextre_latching_end_effector.dae  dextre_tool_platform.dae  mobile_base_system.dae  p4_truss_20.dae  p4_truss_20_01.dae  p4_truss_20_02.dae  p6_truss_08_01.dae  p6_truss_08_02.dae  s4_truss_23.dae  s4_truss_23_01.dae  s4_truss_23_02.dae  s4_truss_23_all_batteries_isolated.dae  s4_truss_23_battery_bottom_left.dae  s4_truss_23_battery_bottom_right.dae  s4_truss_23_battery_mid_left.dae  s4_truss_23_battery_mid_right.dae  s4_truss_23_battery_middle.dae  s4_truss_23_battery_top_left.dae  (+4 more)
robots/: mobile_servicing_system.urdf.xacro
rviz/: iss.rviz
scripts/: camera_info_frame_remapper.py  move_mss  move_sun.py
urdf/: canadarm2.gazebo.xacro  canadarm2.urdf.xacro  dextre.gazebo.xacro  dextre.urdf.xacro  etvcg_cameras.urdf.xacro  mobile_base_system.gazebo.xacro  mobile_base_system.urdf.xacro  (+7 more)
(+25 files in other folders)
